// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Date Picker Renders bottom left calendar 1`] = `
.c4 {
  color: #57666e;
  height: 16px;
  width: 16px;
}

.c1 {
  display: block;
  font-size: 0.75rem;
  margin-bottom: 8px;
  padding: 0;
}

.c0 {
  height: 60px;
  position: relative;
  width: 140px;
}

.c0:hover .form-group > div {
  background-color: #d9dde2;
}

.c2 {
  background-color: #fff;
  border-radius: 5px;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  height: 32px;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  overflow: unset;
  position: relative;
  width: 140px;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  border: 1px solid #57666e;
  border-left: none;
  border-radius: 0 5px 5px 0;
  box-sizing: border-box;
  color: #06c;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.5rem;
  font-weight: 600;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  margin: 0;
  position: relative;
  text-transform: uppercase;
  width: 32px;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent !important;
  border: 1px solid #57666e;
  border-radius: 5px 0 0 5px;
  box-shadow: none;
  box-sizing: border-box;
  color: #333;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: inherit;
  font-size: 0.875rem;
  font-weight: 500;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  padding: 8px 0 8px 8px;
  width: 108px;
}

.c5::-webkit-input-placeholder {
  color: #999;
  font-size: 0.875rem;
  font-weight: 400;
  margin: 0;
}

.c5::-moz-placeholder {
  color: #999;
  font-size: 0.875rem;
  font-weight: 400;
  margin: 0;
}

.c5:-ms-input-placeholder {
  color: #999;
  font-size: 0.875rem;
  font-weight: 400;
  margin: 0;
}

.c5::placeholder {
  color: #999;
  font-size: 0.875rem;
  font-weight: 400;
  margin: 0;
}

.c6 {
  color: #a40c2e;
  left: 0;
  position: absolute !important;
  top: 20px;
}

.c7 {
  height: 60px;
  left: 0;
  position: absolute;
  top: 0;
}

.c8 {
  background: transparent;
  cursor: pointer;
  -webkit-filter: alpha(opacity=0);
  filter: alpha(opacity=0);
  height: 100%;
  opacity: 0;
  position: relative;
  width: 140px;
}

.c9 {
  border: none;
  height: 256px;
  left: -5px !important;
  margin: 0;
  outline: none;
  padding: 0;
  position: absolute;
  width: 250px;
  z-index: 10;
  z-index: -1000;
  -webkit-transform: translate3d(-105px,64px,0px) !important;
  -ms-transform: translate3d(-105px,64px,0px) !important;
  transform: translate3d(-105px,64px,0px) !important;
}

<div
  className="c0"
  data-valid={true}
  disabled={false}
>
  <label
    className="c1"
  >
    Date
  </label>
  <div
    className="c2 form-group"
  >
    <div
      className="c3"
      disabled={false}
    >
      <svg
        className="c4"
        disabled={false}
      />
    </div>
    <input
      className="c5"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      pattern="([12]\\\\d{3}-(0[1-9]|1[0-2])-(0[1-9]|[12]\\\\d|3[01]))"
      placeholder="AAAA-MM-JJ"
      required={false}
      type="text"
      value=""
    />
    <p
      className="c6 error-message"
      style={
        Object {
          "display": "none",
        }
      }
    >
      Invalid date
    </p>
  </div>
  <div
    className="c7 dropdown"
    onKeyDown={[Function]}
  >
    <button
      aria-expanded={false}
      aria-haspopup={true}
      aria-label={null}
      className="c8 btn btn-transparent"
      disabled={false}
      onClick={[Function]}
      tabIndex={-1}
      type="button"
    >
      <span
        className="sr-only"
      >
        Toggle Dropdown
      </span>
    </button>
    <div
      aria-hidden={true}
      className="c9 dropdown-menu"
      open={false}
      position="bottomLeft"
      role="menu"
      tabIndex="-1"
    />
  </div>
</div>
`;

exports[`Date Picker Renders bottom right calendar 1`] = `
.c4 {
  color: #57666e;
  height: 16px;
  width: 16px;
}

.c1 {
  display: block;
  font-size: 0.75rem;
  margin-bottom: 8px;
  padding: 0;
}

.c0 {
  height: 60px;
  position: relative;
  width: 140px;
}

.c0:hover .form-group > div {
  background-color: #d9dde2;
}

.c2 {
  background-color: #fff;
  border-radius: 5px;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  height: 32px;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  overflow: unset;
  position: relative;
  width: 140px;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  border: 1px solid #57666e;
  border-left: none;
  border-radius: 0 5px 5px 0;
  box-sizing: border-box;
  color: #06c;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.5rem;
  font-weight: 600;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  margin: 0;
  position: relative;
  text-transform: uppercase;
  width: 32px;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent !important;
  border: 1px solid #57666e;
  border-radius: 5px 0 0 5px;
  box-shadow: none;
  box-sizing: border-box;
  color: #333;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: inherit;
  font-size: 0.875rem;
  font-weight: 500;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  padding: 8px 0 8px 8px;
  width: 108px;
}

.c5::-webkit-input-placeholder {
  color: #999;
  font-size: 0.875rem;
  font-weight: 400;
  margin: 0;
}

.c5::-moz-placeholder {
  color: #999;
  font-size: 0.875rem;
  font-weight: 400;
  margin: 0;
}

.c5:-ms-input-placeholder {
  color: #999;
  font-size: 0.875rem;
  font-weight: 400;
  margin: 0;
}

.c5::placeholder {
  color: #999;
  font-size: 0.875rem;
  font-weight: 400;
  margin: 0;
}

.c6 {
  color: #a40c2e;
  left: 0;
  position: absolute !important;
  top: 20px;
}

.c7 {
  height: 60px;
  left: 0;
  position: absolute;
  top: 0;
}

.c8 {
  background: transparent;
  cursor: pointer;
  -webkit-filter: alpha(opacity=0);
  filter: alpha(opacity=0);
  height: 100%;
  opacity: 0;
  position: relative;
  width: 140px;
}

.c9 {
  border: none;
  height: 256px;
  left: -5px !important;
  margin: 0;
  outline: none;
  padding: 0;
  position: absolute;
  width: 250px;
  z-index: 10;
  z-index: -1000;
  -webkit-transform: translate3d(5px,64px,0px) !important;
  -ms-transform: translate3d(5px,64px,0px) !important;
  transform: translate3d(5px,64px,0px) !important;
}

<div
  className="c0"
  data-valid={true}
  disabled={false}
>
  <label
    className="c1"
  >
    Date
  </label>
  <div
    className="c2 form-group"
  >
    <div
      className="c3"
      disabled={false}
    >
      <svg
        className="c4"
        disabled={false}
      />
    </div>
    <input
      className="c5"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      pattern="([12]\\\\d{3}-(0[1-9]|1[0-2])-(0[1-9]|[12]\\\\d|3[01]))"
      placeholder="AAAA-MM-JJ"
      required={false}
      type="text"
      value=""
    />
    <p
      className="c6 error-message"
      style={
        Object {
          "display": "none",
        }
      }
    >
      Invalid date
    </p>
  </div>
  <div
    className="c7 dropdown"
    onKeyDown={[Function]}
  >
    <button
      aria-expanded={false}
      aria-haspopup={true}
      aria-label={null}
      className="c8 btn btn-transparent"
      disabled={false}
      onClick={[Function]}
      tabIndex={-1}
      type="button"
    >
      <span
        className="sr-only"
      >
        Toggle Dropdown
      </span>
    </button>
    <div
      aria-hidden={true}
      className="c9 dropdown-menu"
      open={false}
      position="bottomRight"
      role="menu"
      tabIndex="-1"
    />
  </div>
</div>
`;

exports[`Date Picker Renders calendar with error message 1`] = `
.c4 {
  color: #57666e;
  height: 16px;
  width: 16px;
}

.c1 {
  display: block;
  font-size: 0.75rem;
  margin-bottom: 8px;
  padding: 0;
}

.c0 {
  height: 60px;
  position: relative;
  width: 140px;
}

.c0:hover .form-group > div {
  background-color: #d9dde2;
}

.c2 {
  background-color: #fff;
  border-radius: 5px;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  height: 32px;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  overflow: unset;
  position: relative;
  width: 140px;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  border: 1px solid #57666e;
  border-left: none;
  border-radius: 0 5px 5px 0;
  box-sizing: border-box;
  color: #06c;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.5rem;
  font-weight: 600;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  margin: 0;
  position: relative;
  text-transform: uppercase;
  width: 32px;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent !important;
  border: 1px solid #a40c2e !important;
  border-radius: 5px 0 0 5px;
  box-shadow: none;
  box-sizing: border-box;
  color: #333;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: inherit;
  font-size: 0.875rem;
  font-weight: 500;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  padding: 8px 0 8px 8px;
  width: 108px;
}

.c5::-webkit-input-placeholder {
  color: #999;
  font-size: 0.875rem;
  font-weight: 400;
  margin: 0;
}

.c5::-moz-placeholder {
  color: #999;
  font-size: 0.875rem;
  font-weight: 400;
  margin: 0;
}

.c5:-ms-input-placeholder {
  color: #999;
  font-size: 0.875rem;
  font-weight: 400;
  margin: 0;
}

.c5::placeholder {
  color: #999;
  font-size: 0.875rem;
  font-weight: 400;
  margin: 0;
}

.c6 {
  color: #a40c2e;
  left: 0;
  position: absolute !important;
  top: 20px;
}

.c7 {
  height: 60px;
  left: 0;
  position: absolute;
  top: 0;
}

.c8 {
  background: transparent;
  cursor: pointer;
  -webkit-filter: alpha(opacity=0);
  filter: alpha(opacity=0);
  height: 100%;
  opacity: 0;
  position: relative;
  width: 140px;
}

.c9 {
  border: none;
  height: 256px;
  left: -5px !important;
  margin: 0;
  outline: none;
  padding: 0;
  position: absolute;
  width: 250px;
  z-index: 10;
  z-index: -1000;
  -webkit-transform: translate3d(5px,64px,0px) !important;
  -ms-transform: translate3d(5px,64px,0px) !important;
  transform: translate3d(5px,64px,0px) !important;
}

<div
  className="c0"
  data-valid={false}
  disabled={false}
>
  <label
    className="c1"
  >
    Date
  </label>
  <div
    className="c2 form-group"
  >
    <div
      className="c3"
      disabled={false}
    >
      <svg
        className="c4"
        disabled={false}
      />
    </div>
    <input
      className="c5"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      pattern="([12]\\\\d{3}-(0[1-9]|1[0-2])-(0[1-9]|[12]\\\\d|3[01]))"
      placeholder="AAAA-MM-JJ"
      required={false}
      type="text"
      value=""
    />
    <p
      className="c6 error-message"
      style={Object {}}
    >
      Invalid date
    </p>
  </div>
  <div
    className="c7 dropdown"
    onKeyDown={[Function]}
  >
    <button
      aria-expanded={false}
      aria-haspopup={true}
      aria-label={null}
      className="c8 btn btn-transparent"
      disabled={false}
      onClick={[Function]}
      tabIndex={-1}
      type="button"
    >
      <span
        className="sr-only"
      >
        Toggle Dropdown
      </span>
    </button>
    <div
      aria-hidden={true}
      className="c9 dropdown-menu"
      open={false}
      position="bottomRight"
      role="menu"
      tabIndex="-1"
    />
  </div>
</div>
`;

exports[`Date Picker Renders top left calendar 1`] = `
.c4 {
  color: #57666e;
  height: 16px;
  width: 16px;
}

.c1 {
  display: block;
  font-size: 0.75rem;
  margin-bottom: 8px;
  padding: 0;
}

.c0 {
  height: 60px;
  position: relative;
  width: 140px;
}

.c0:hover .form-group > div {
  background-color: #d9dde2;
}

.c2 {
  background-color: #fff;
  border-radius: 5px;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  height: 32px;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  overflow: unset;
  position: relative;
  width: 140px;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  border: 1px solid #57666e;
  border-left: none;
  border-radius: 0 5px 5px 0;
  box-sizing: border-box;
  color: #06c;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.5rem;
  font-weight: 600;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  margin: 0;
  position: relative;
  text-transform: uppercase;
  width: 32px;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent !important;
  border: 1px solid #57666e;
  border-radius: 5px 0 0 5px;
  box-shadow: none;
  box-sizing: border-box;
  color: #333;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: inherit;
  font-size: 0.875rem;
  font-weight: 500;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  padding: 8px 0 8px 8px;
  width: 108px;
}

.c5::-webkit-input-placeholder {
  color: #999;
  font-size: 0.875rem;
  font-weight: 400;
  margin: 0;
}

.c5::-moz-placeholder {
  color: #999;
  font-size: 0.875rem;
  font-weight: 400;
  margin: 0;
}

.c5:-ms-input-placeholder {
  color: #999;
  font-size: 0.875rem;
  font-weight: 400;
  margin: 0;
}

.c5::placeholder {
  color: #999;
  font-size: 0.875rem;
  font-weight: 400;
  margin: 0;
}

.c6 {
  color: #a40c2e;
  left: 0;
  position: absolute !important;
  top: 20px;
}

.c7 {
  height: 60px;
  left: 0;
  position: absolute;
  top: 0;
}

.c8 {
  background: transparent;
  cursor: pointer;
  -webkit-filter: alpha(opacity=0);
  filter: alpha(opacity=0);
  height: 100%;
  opacity: 0;
  position: relative;
  width: 140px;
}

.c9 {
  border: none;
  height: 256px;
  left: -5px !important;
  margin: 0;
  outline: none;
  padding: 0;
  position: absolute;
  width: 250px;
  z-index: 10;
  z-index: -1000;
  -webkit-transform: translate3d(-105px,-241px,0px) !important;
  -ms-transform: translate3d(-105px,-241px,0px) !important;
  transform: translate3d(-105px,-241px,0px) !important;
  top: -10px;
}

<div
  className="c0"
  data-valid={true}
  disabled={false}
>
  <label
    className="c1"
  >
    Date
  </label>
  <div
    className="c2 form-group"
  >
    <div
      className="c3"
      disabled={false}
    >
      <svg
        className="c4"
        disabled={false}
      />
    </div>
    <input
      className="c5"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      pattern="([12]\\\\d{3}-(0[1-9]|1[0-2])-(0[1-9]|[12]\\\\d|3[01]))"
      placeholder="AAAA-MM-JJ"
      required={false}
      type="text"
      value=""
    />
    <p
      className="c6 error-message"
      style={
        Object {
          "display": "none",
        }
      }
    >
      Invalid date
    </p>
  </div>
  <div
    className="c7 dropdown"
    onKeyDown={[Function]}
  >
    <button
      aria-expanded={false}
      aria-haspopup={true}
      aria-label={null}
      className="c8 btn btn-transparent"
      disabled={false}
      onClick={[Function]}
      tabIndex={-1}
      type="button"
    >
      <span
        className="sr-only"
      >
        Toggle Dropdown
      </span>
    </button>
    <div
      aria-hidden={true}
      className="c9 dropdown-menu"
      open={false}
      position="topLeft"
      role="menu"
      tabIndex="-1"
    />
  </div>
</div>
`;

exports[`Date Picker Renders top right calendar 1`] = `
.c4 {
  color: #57666e;
  height: 16px;
  width: 16px;
}

.c1 {
  display: block;
  font-size: 0.75rem;
  margin-bottom: 8px;
  padding: 0;
}

.c0 {
  height: 60px;
  position: relative;
  width: 140px;
}

.c0:hover .form-group > div {
  background-color: #d9dde2;
}

.c2 {
  background-color: #fff;
  border-radius: 5px;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  height: 32px;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  overflow: unset;
  position: relative;
  width: 140px;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  border: 1px solid #57666e;
  border-left: none;
  border-radius: 0 5px 5px 0;
  box-sizing: border-box;
  color: #06c;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.5rem;
  font-weight: 600;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  margin: 0;
  position: relative;
  text-transform: uppercase;
  width: 32px;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent !important;
  border: 1px solid #57666e;
  border-radius: 5px 0 0 5px;
  box-shadow: none;
  box-sizing: border-box;
  color: #333;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: inherit;
  font-size: 0.875rem;
  font-weight: 500;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  padding: 8px 0 8px 8px;
  width: 108px;
}

.c5::-webkit-input-placeholder {
  color: #999;
  font-size: 0.875rem;
  font-weight: 400;
  margin: 0;
}

.c5::-moz-placeholder {
  color: #999;
  font-size: 0.875rem;
  font-weight: 400;
  margin: 0;
}

.c5:-ms-input-placeholder {
  color: #999;
  font-size: 0.875rem;
  font-weight: 400;
  margin: 0;
}

.c5::placeholder {
  color: #999;
  font-size: 0.875rem;
  font-weight: 400;
  margin: 0;
}

.c6 {
  color: #a40c2e;
  left: 0;
  position: absolute !important;
  top: 20px;
}

.c7 {
  height: 60px;
  left: 0;
  position: absolute;
  top: 0;
}

.c8 {
  background: transparent;
  cursor: pointer;
  -webkit-filter: alpha(opacity=0);
  filter: alpha(opacity=0);
  height: 100%;
  opacity: 0;
  position: relative;
  width: 140px;
}

.c9 {
  border: none;
  height: 256px;
  left: -5px !important;
  margin: 0;
  outline: none;
  padding: 0;
  position: absolute;
  width: 250px;
  z-index: 10;
  z-index: -1000;
  -webkit-transform: translate3d(5px,-241px,0px) !important;
  -ms-transform: translate3d(5px,-241px,0px) !important;
  transform: translate3d(5px,-241px,0px) !important;
  top: -10px;
}

<div
  className="c0"
  data-valid={true}
  disabled={false}
>
  <label
    className="c1"
  >
    Date
  </label>
  <div
    className="c2 form-group"
  >
    <div
      className="c3"
      disabled={false}
    >
      <svg
        className="c4"
        disabled={false}
      />
    </div>
    <input
      className="c5"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      pattern="([12]\\\\d{3}-(0[1-9]|1[0-2])-(0[1-9]|[12]\\\\d|3[01]))"
      placeholder="AAAA-MM-JJ"
      required={false}
      type="text"
      value=""
    />
    <p
      className="c6 error-message"
      style={
        Object {
          "display": "none",
        }
      }
    >
      Invalid date
    </p>
  </div>
  <div
    className="c7 dropdown"
    onKeyDown={[Function]}
  >
    <button
      aria-expanded={false}
      aria-haspopup={true}
      aria-label={null}
      className="c8 btn btn-transparent"
      disabled={false}
      onClick={[Function]}
      tabIndex={-1}
      type="button"
    >
      <span
        className="sr-only"
      >
        Toggle Dropdown
      </span>
    </button>
    <div
      aria-hidden={true}
      className="c9 dropdown-menu"
      open={false}
      position="topRight"
      role="menu"
      tabIndex="-1"
    />
  </div>
</div>
`;
